<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/etDialogOName"
        android:layout_width="match_parent"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/nombre_objeto"
        />

    <EditText
        android:id="@+id/etDialogMoney"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:hint="@string/dinero"
        />

    <EditText
        android:id="@+id/etDialogHName"
        android:layout_width="match_parent"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_persona"
        />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/informacion_popup"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>


</LinearLayout>