<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuyoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight">


        <ImageButton
            android:id="@+id/ibFromSuyo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_white_arrow_back_24" />

        <TextView
            android:id="@+id/tvRvName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/proxima"
            android:text="@string/lista_objetos"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvListaItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvRvName"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="206dp"
            android:background="@drawable/suyo_add"
            android:text="@string/btn_add"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="206dp"
            android:background="@drawable/suyo_delete"
            android:text="@string/btn_delete"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>