<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/colorPrimaryLight">

        <TextView
            android:id="@+id/tvAppname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/proxima"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAppname"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:fontFamily="@font/proxima"
            android:text="@string/app_name_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@android:color/white">

        <Button
            android:id="@+id/btnIguales"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/ivIguales"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_partes_iguales"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSuyo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/ivSuyo"
            android:layout_below="@+id/btnIguales"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_cada_uno_su_parte"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/btnSuyo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/ivSettings"
            android:background="@drawable/transparent"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_Ajustes"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivSuyo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/btnIguales"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/btn_cada_uno_su_parte"
            android:src="@drawable/ic_baseline_list" />

        <ImageView
            android:id="@+id/ivIguales"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/btn_partes_iguales"
            android:src="@drawable/ic_baseline_brightness" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/btnSuyo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/btn_Ajustes"
            android:src="@drawable/ic_baseline_settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="WIP: provisional UI"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSuyo"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivSuyo"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_cada_uno_su_parte_desc"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnIguales"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/ivIguales"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_partes_iguales_desc"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSetting"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/ivSettings"
            android:fontFamily="@font/proxima"
            android:text="@string/btn_Ajustes_desc"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

    </RelativeLayout>
</LinearLayout>